# rctd_env

./: .gitignore  Dockerfile  README.md  _patch_evidence.py  baseline.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  trajectories.jsonl
rctd_env/: __init__.py  client.py  models.py  training_example.py
rctd_env/server/: __init__.py  app.py  environment.py  graders.py  tasks.py
server/: app.py
tests/: test_environment.py
